file(GLOB_RECURSE _CURRENT_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cc")
list(REMOVE_ITEM _CURRENT_SRC_FILES "md_log_adapter.cc")
set_property(SOURCE ${_CURRENT_SRC_FILES} PROPERTY COMPILE_DEFINITIONS SUBMODULE_ID=mindspore::SubModuleId::SM_MD)

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    include(${CMAKE_SOURCE_DIR}/mindspore/ccsrc/minddata/cmake/dataset.cmake)
    set(DATASET_UTIL ${CMAKE_BINARY_DIR}/merge/mindspore/minddata/util)
    merge_minddata_files(${CMAKE_CURRENT_SOURCE_DIR}/ ${DATASET_UTIL} dataset_util "md_log_adapter.cc" "" TRUE)
    file(GLOB DATASET_UTIL_MERGE_LIST "${DATASET_UTIL}/*.cc")
    add_library(utils OBJECT ${DATASET_UTIL_MERGE_LIST})
else()
    add_library(utils OBJECT ${_CURRENT_SRC_FILES})
endif()