if(ENABLE_GPU)
    file(GLOB_RECURSE _GPU_KERNEL_EXECUTOR_SRC_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cc")
    set_property(SOURCE ${_GPU_KERNEL_EXECUTOR_SRC_LIST} PROPERTY COMPILE_DEFINITIONS
    SUBMODULE_ID=mindspore::SubModuleId::SM_DEVICE)
    add_library(_mindspore_plugin_gpu_kernel_executor_obj OBJECT ${_GPU_KERNEL_EXECUTOR_SRC_LIST})
endif()
